[gd_scene load_steps=3 format=3 uid="uid://cq517c7fth3sl"]

[ext_resource type="Script" path="res://civilian_base/civilian_base.gd" id="1_uf8w5"]
[ext_resource type="PackedScene" uid="uid://cx1ruwepsliqj" path="res://chicken/chicken_civ.tscn" id="2_ke8gx"]

[node name="civilian_base" type="CharacterBody2D"]
script = ExtResource("1_uf8w5")
chicken_scene = ExtResource("2_ke8gx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CivSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="CivHolder" type="Node" parent="."]

[node name="Start1" type="Marker2D" parent="."]

[node name="CivSpawnLocation" type="PathFollow2D" parent="."]

[connection signal="timeout" from="CivSpawnTimer" to="." method="_on_civ_spawn_timer_timeout"]
